--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
             <h2>Resume</h2>
 
-            <a href="/storage/emulated/0/DCIM/Screenshots/IMG_20250321_141358.jpg" target="_blank" class="download-button">Download CV</a>
+            <a href="my_resume (1).pdf"target="_blank" class="download-button">Download CV</a>
 
         </center>
 
