--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
             <!-- Add your profile picture here -->
 
-            <img src="/storage/emulated/0/DCIM/Camera/IMG_20250109_131244.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG_20250204_092419.jpg" alt="Your Profile Picture" class="profile-picture">
 
             <h1>S.kaviya</h1>
 
